# Agent-Makr1

./: .env.example  .gitignore  README.md  agent_demo.py  agent_notebook.ipynb  claude_desktop_config.json  connect_github.sh  main.py  mcp_server.py  mcp_server_standalone.py  pyproject.toml  run_mcp_server.sh  setup_claude.py  setup_github.sh  test_setup.py
